# aubaine.io

./: .env  .env.dev  .env.test  .gitignore  .symfony.local.yaml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  composer.json  importmap.php  package-lock.json  package.json  phpstan.dist.neon  phpunit.dist.xml  tailwind.config.js  webpack.config.js
.claude/skills/aubaine-visual-supports-designs/: .gitignore  LICENSE  README.md  SKILL.md  manifest.txt  pyproject.toml
.claude/skills/aubaine-visual-supports-designs/references/: citations.md
.claude/skills/aubaine-visual-supports-designs/scripts/: check_contrast.py  export_preflight.py  manuscript_lint.py  signature_planner.py
.claude/skills/aubaine-visual-supports-designs/standards/: accessibility_readability.md  bookcraft_layout.md  clean_code_pdf_best_practices.md  (+5 more)
codex/: Makefile  README.md  glossary.md  pyproject.toml
codex/combat-system/: armor-class.md  turn-structure.md
codex/combat-system/data/: aoe-breakeven.json  damage.json  damage.md  hit-by-offset.json  hit-by-offset.md  rounds-to-kill.json  rounds-to-kill.md
codex/combat-system/lab/: combat.py  generate.py
codex/dice-and-modifiers/: advantage-disadvantage.md  aptitudes.md  characteristics.md  criticals.md  dice-and-keep.md  difficulty.md  resolution.md  roll-types.md
codex/dice-and-modifiers/data/: advantage-values.json  advantage-values.md  crit-rates.json  crit-rates.md  opposed.json  opposed.md  roll-distributions.json  summary.json
codex/dice-and-modifiers/lab/: dice.py  generate.py  tables.py
(+703 files in other folders)
